--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>GTCoding</title>
+    <title>Transperecny</title>
 </head>
 
 <body>
@@ -19,10 +19,10 @@
                 <a href="index.html">Home</a>
             </li>
             <li>
-                <a href="blogslist.html">Blog</a>
+                <a href="blogslist.html">Basic</a>
             </li>
             <li>
-                <a href="blogslist.html">Projects</a>
+                <a href="blogslist.html">Graph</a>
             </li>
             <li>
                 <a href="about.html">About</a>
@@ -219,7 +219,7 @@
                         </li>
                     </ul>
                 </div>
-                <p>This website is developed by GTCoding</p>
+                <p>This website is developed by Transperency Team</p>
             </div>
         </footer>
 
