--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     </div>
 
     <div id="banner">
-        <h1>&lt;GTCoding/&gt;</h1>
-        <h3>Learn coding from scratch</h3>
+        <h1>&lt;Transperency/&gt;</h1>
+        <h3>get the core of finance</h3>
     </div>
 
     <main>
