--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <nav>
         <div id="logo-img">
             <a href="#">
-                <img src="img/logo.png" alt="GTCoding Logo">
+                <img src="img/logo.png" alt="Transperency Logo">
             </a>
         </div>
         <div id="menu-icon">
@@ -47,7 +47,7 @@
                 <a class="active" href="index.html">Home</a>
             </li>
             <li>
-                <a href="blogslist.html">Blog</a>
+                <a href="blogslist.html">Graph</a>
             </li>
             <li>
                 <a href="blogslist.html">Projects</a>
