--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                             <a href="#">Privacy Policy</a>
                         </li>
                         <li>
-                            <a href="blogslist.html">Blogs</a>
+                            <a href="blogslist.html">Graph</a>
                         </li>
                         <li>
                             <a href="blogslist.html">Projects</a>
