--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Slab" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <title>GTCoding</title>
+  <title>Transperecny</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
               <a href="index.html">Home</a>
           </li>
           <li>
-              <a href="blogslist.html">Blog</a>
+              <a href="blogslist.html">Graph</a>
           </li>
           <li>
               <a href="blogslist.html">Projects</a>
@@ -36,7 +36,7 @@
   <nav>
       <div id="logo-img">
           <a href="#">
-              <img src="img/logo.png" alt="GTCoding Logo">
+              <img src="img/logo.png" alt="Transperency Logo">
           </a>
       </div>
       <div id="menu-icon">
@@ -47,7 +47,7 @@
               <a href="index.html">Home</a>
           </li>
           <li>
-              <a href="blogslist.html">Blog</a>
+              <a href="blogslist.html">Graph</a>
           </li>
           <li>
               <a href="blogslist.html">Projects</a>
@@ -69,7 +69,7 @@
 
   <main>
 
-    <h2 class="page-heading">About GTCoding</h2>
+    <h2 class="page-heading">About Transperency</h2>
     <div id="post-container">
       <section id="blogpost">
         <div class="card">
@@ -146,7 +146,7 @@
                     </li>
                 </ul>
             </div>
-            <p>This website is developed by GTCoding</p>
+            <p>This website is developed by Transperency Team</p>
         </div>
     </footer>
 
