--- a/blogpost.html
+++ b/blogpost.html
@@ -19,7 +19,7 @@
               <a href="index.html">Home</a>
           </li>
           <li>
-              <a  href="blogslist.html">Blog</a>
+              <a  href="blogslist.html">Graph</a>
           </li>
           <li>
               <a href="blogslist.html">Projects</a>
@@ -47,7 +47,7 @@
               <a href="index.html">Home</a>
           </li>
           <li>
-              <a class="active" href="blogslist.html">Blog</a>
+              <a class="active" href="blogslist.html">Graph</a>
           </li>
           <li>
               <a href="blogslist.html">Projects</a>
@@ -74,7 +74,7 @@
       <section id="blogpost">
         <div class="card">
           <div class="card-meta-blogpost">
-            Posted by Admin on 01/01/2018 in
+            Posted by Admin on 01/01/2020 in
             <a href="#">Web Dev</a>
           </div>
           <div class="card-image">
@@ -120,7 +120,7 @@
                         <a href="#">Privacy Policy</a>
                     </li>
                     <li>
-                        <a href="blogslist.html">Blogs</a>
+                        <a href="blogslist.html">Graph</a>
                     </li>
                     <li>
                         <a href="blogslist.html">Projects</a>
@@ -153,7 +153,7 @@
                     </li>
                 </ul>
             </div>
-            <p>This website is developed by GTCoding</p>
+            <p>This website is developed by Transperecny</p>
         </div>
     </footer>
 
