--- a/blogslist.html
+++ b/blogslist.html
@@ -19,7 +19,7 @@
               <a href="index.html">Home</a>
           </li>
           <li>
-              <a href="blogslist.html">Blog</a>
+              <a href="blogslist.html">Graph</a>
           </li>
           <li>
               <a href="blogslist.html">Projects</a>
@@ -36,7 +36,7 @@
   <nav>
       <div id="logo-img">
           <a href="#">
-              <img src="img/logo.png" alt="GTCoding Logo">
+              <img src="img/logo.png" alt="Transperecny Logo">
           </a>
       </div>
       <div id="menu-icon">
@@ -47,7 +47,7 @@
               <a href="index.html">Home</a>
           </li>
           <li>
-              <a class="active" href="blogslist.html">Blog</a>
+              <a class="active" href="blogslist.html">Graph</a>
           </li>
           <li>
               <a href="blogslist.html">Projects</a>
@@ -83,7 +83,7 @@
             <h3>The Blog Title Here</h3>
           </a>
           <div class="card-meta">
-            Posted by Admin on 23/01/2018 in
+            Posted by Admin on 23/01/2020 in
             <a href="#">Web Dev</a>
           </div>
           <p>
@@ -152,7 +152,7 @@
             <h3>The Blog Title Here</h3>
           </a>
           <div class="card-meta">
-            Posted by Admin on 23/01/2018 in
+            Posted by Admin on 23/01/2020 in
             <a href="#">Web Dev</a>
           </div>
           <p>
@@ -266,7 +266,7 @@
                     </li>
                 </ul>
             </div>
-            <p>This website is developed by GTCoding</p>
+            <p>This website is developed by Transpercny Team</p>
         </div>
     </footer>
 
