--- a/blogslist.html
+++ b/blogslist.html
@@ -129,7 +129,7 @@
             <h3>The Blog Title Here</h3>
           </a>
           <div class="card-meta">
-            Posted by Admin on 23/01/2018 in
+            Posted by Admin on 23/01/2020 in
             <a href="#">Web Dev</a>
           </div>
           <p>
@@ -233,7 +233,7 @@
                         <a href="#">Privacy Policy</a>
                     </li>
                     <li>
-                        <a href="blogslist.html">Blogs</a>
+                        <a href="blogslist.html">Graph</a>
                     </li>
                     <li>
                         <a href="blogslist.html">Projects</a>
